fix: home min-height on mobile devices

--- a/src/style/partials/m2/main/_home.scss
+++ b/src/style/partials/m2/main/_home.scss
@@ -1,6 +1,10 @@
 .home {
   height: 100vh;
 
+  @include media(992) {
+    min-height: 960px;
+  }
+
   &-container {
     position: relative;
     display: flex;
